remove redundant lines

--- a/code.ipynb
+++ b/code.ipynb
@@ -379,8 +379,7 @@
     "# Convert categorical columns to lowercase (standardization)\n",
     "obj_cols = df.select_dtypes(['object']).columns\n",
     "for col in obj_cols:\n",
-    "    df[col] = df[col].apply(lambda x: str(x).lower() if pd.notnull(x) else x)\n",
-    "    # df[col] = df[col].astype('category')    "
+    "    df[col] = df[col].apply(lambda x: str(x).lower() if pd.notnull(x) else x)   "
    ]
   },
   {
@@ -512,11 +511,6 @@
     "# Impute numerical columns with median (except for dtir1 and ltv)\n",
     "for col in num_cols:\n",
     "    df[col] = df[col].fillna(df[col].median())\n",
-    "    \n",
-    "\n",
-    "# Impute dtir1 and ltv with actual calculation\n",
-    "# df['dtir1'] = df['dtir1'].fillna(df['loan_amount']/df['income'])\n",
-    "# df['ltv'] = df['ltv'].fillna(df['loan_amount']/df['property_value'])\n",
     "\n",
     "# Impute categorical columns with mode\n",
     "for col in obj_cols:\n",
